# SpaceInvenders

./: .gitignore  .gitmodules  CMakeLists.txt  settings.json
src/: Config.hpp  GameContext.hpp  Settings.hpp  gl_widget.cpp  gl_widget.hpp  main.cpp
src/GameObjects/: Bullet.hpp  CMakeLists.txt  GameFactory.hpp  GameObjects.hpp  GameObjectsManager.hpp  GameObjectsTypes.hpp  IGameObjects.hpp  ISpaceObjects.hpp  Obstacles.hpp  SpaceObjects.hpp
src/GameObjects/SpaceCrafts/: AlienCraft.hpp  ISpaceCrafts.hpp  PlayerCraft.cpp  PlayerCraft.hpp  SpaceCrafts.hpp
src/Patterns/: Factory.hpp  FactoryPolicy.hpp  Singleton.hpp
src/System/Logger/: Logger.hpp
src/Tools/: CMakeLists.txt
tests/: Factory_tests.cpp  main_test.cpp
